brief apply user

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
-.App {
+.tower{
+  z-index:3;
+  background: lightsteelblue;
+  border: 2px solid #666;
+  color: #666;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-Content: center;
+  align-Items: center;
+  padding: 3px;
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
 
-.App-link {
-  color: #61dafb;
+.attack{
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.attack-svg{
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.marine{
+  z-index:2;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background: red;
 }
