--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,59 @@
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 .tower{
   z-index:3;
   background: lightsteelblue;
-  border: 2px solid #666;
   color: #666;
   text-align: center;
   display: flex;
   justify-Content: center;
   align-Items: center;
   padding: 3px;
+  border: 2px solid #666;
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
+  font-family: Arial, sans-serif;
+  line-height: 0px;
+}
+
+.tower-1{
+  width: 10px;
+  height: 10px;
+  font-size: 10px;
+  border-width: 1px;
+}
+.tower-2{
+  width: 12px;
+  height: 12px;
+  font-size: 10px;
+  border-width: 1px;
+}
+.tower-3{
+  width: 14px;
+  height: 14px;
+  font-size: 12px;
+  border-width: 1px;
+}
+.tower-4{
+  width: 16px;
+  height: 16px;
+  font-size: 12px;
+  border-width: 2px;
+}
+.tower-5{
+  width: 18px;
+  height: 18px;
+  font-size: 12px;
+  border-width: 2px;
 }
 
 .attack{
